hard-gists/8831412/run.log
=== Docker Run Log for 8831412 ===
Started at: Mi 29. Okt 18:02:51 CET 2025

[2025-10-29 18:02:51] START: Running container for 8831412
[2025-10-29 18:02:52] SUCCESS: Container 44d6ccd5bf5e02d0c09d55fd7595ba8c595332a2b0f5fad73f0219ca9849b71b started for 8831412
=== Container logs for 8831412 ===
  File "/snippet.py", line 16
    print 'central state', central.state
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8831412 ===
[2025-10-29 18:02:54] INFO: Container 44d6ccd5bf5e02d0c09d55fd7595ba8c595332a2b0f5fad73f0219ca9849b71b has stopped
